add Java 程序使用安全管理器